--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dlrexjs",
+  "name": "httyd",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -26,6 +26,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "deeplearn": "^0.5.0"
+    "tfjs": "^0.6.0"
   }
 }
