--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,21 @@
 {
-    "files.associations": {
-        "__split_buffer": "c",
-        "bitset": "c",
-        "deque": "c",
-        "initializer_list": "c",
-        "iterator": "c",
-        "memory": "c",
-        "queue": "c",
-        "string": "c",
-        "string_view": "c",
-        "utility": "c",
-        "vector": "c"
-    }
+  "files.associations": {
+    "__split_buffer": "c",
+    "bitset": "c",
+    "deque": "c",
+    "initializer_list": "c",
+    "iterator": "c",
+    "memory": "c",
+    "queue": "c",
+    "string": "c",
+    "string_view": "c",
+    "utility": "c",
+    "vector": "c"
+  },
+  "editor.formatOnSave": true,
+  "[javascript]": {
+    "editor.formatOnSave": false
+  },
+  "eslint.autoFixOnSave": true,
+  "eslint.alwaysShowStatus": true
 }
