--- a/package.json
+++ b/package.json
@@ -3,29 +3,36 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "dev": "webpack",
     "build": "webpack -p",
     "watch": "webpack --watch",
+    "lint": "eslint ./src",
     "start:dev": "DEBUG=1 webpack-dev-server"
   },
-  "author": "",
+  "author": "Manraj Singh Grover <manrajsinghgrover@gmail.com>",
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
     "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^0.28.7",
+    "eslint": "^4.19.1",
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-prettier": "^2.6.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "prettier": "1.12.1",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.7.1"
   },
   "license": "MIT",
   "dependencies": {
-    "tfjs": "^0.6.0"
+    "@tensorflow/tfjs": "^0.11.0"
   }
 }
