--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,14 @@
 {
-  "presets": ["env", "stage-3"],
-  "plugins": ["transform-regenerator"]
+  "presets": [
+    "env"
+  ],
+  "plugins": [
+    [
+      "transform-class-properties",
+      {
+        "spec": true
+      }
+    ],
+    "transform-regenerator"
+  ]
 }
