--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "prettier": "1.12.1",
     "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.7.1"
   },
